--- a/UniversityManagement/appsettings.json
+++ b/UniversityManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-B3UNIEV\\SQLEXPRESS; Database=University;Trusted_Connection=True"
+  }
 }
