added logger - serilog

--- a/UniversityManagement/appsettings.json
+++ b/UniversityManagement/appsettings.json
@@ -10,5 +10,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-B3UNIEV\\SQLEXPRESS; Database=University;Trusted_Connection=True"
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/web-log-.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
